--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     margin: 0;
     padding: 0;
 }
+img{
+    box-shadow: 10px 10px 20px black;
+}
 
 .sidebar{
    background-color: rgb(197, 191, 191);
