--- a/style.css
+++ b/style.css
@@ -91,18 +91,20 @@ color: rgb(15, 15, 15);
     font-weight: bold;
     font-size: 21px;
     margin: 0 5px;
+    transition: all ease 1s;
 
 }
 .btn-sm{
     font-size: 17px;
     padding: 10px 19px;
     margin: 12px 0;
+    transition: all ease 1s;
 }
 
 .btn:hover{
 background-color: white;
 color: dodgerblue;
- box-shadow: 10px 10px 20px black;
+ box-shadow: 10px 10px 0px black;
 }
 .devpic img{
 
