--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ color: transition;
 .name{
     font-size: 65px;
     font-weight: bold;
-    color: yellow;
+    color: cream;
 }
 .hello{
     font-size: 50px;
