--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     background-color:black;
 }
 body {
-    background-image: url('bgimg.jpg');
+    background-image: url('bgimg.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
