--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ padding: 28px;
 
 .sidebar nav li a{
 text-decoration: none;
-color: transition;
+color: transparent;
 }
 .main{
     /*background-color: yellow;*/
