--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ img{
 }
 
 .sidebar{
-   background-color: rgb(197, 191, 191);
+   background-color: transparent;
     
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
