--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     color: red;
 }
 body {
-    background-image: url('bgimg.jpeg');
+    background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
