--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 body {
     background-image: url('background.jpg');
-    background-size: cover;
+    background-size: comtain;
     background-position: center;
     background-repeat: no-repeat;
 }
