--- a/style.css
+++ b/style.css
@@ -129,7 +129,11 @@ color: dodgerblue;
 .devpic img{
     width: 50vw;
     height: 48vh;
-    image position: center;
+    display: flex;
+            justify-content: center;
+            align-items: center;
+            
+    
 }
 .contactform{
     padding: 0 34px;
