--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 body {
     background-image: url('background.jpg');
     background-size: contain;
-    background-position: top left;
+    background-position: centrr;
     background-repeat: no-repeat;
 }
 img{
