--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ color: yellow;
     justify-content: center;
     flex-direction: column;
 }
+.fill-animation {
+      width: 0;
+      height: 100%;
+      background-color: #3498db;
+      animation: fill 4s ease-in-out forwards;
 .name{
     font-size: 65px;
     font-weight: bold;
