--- a/style.css
+++ b/style.css
@@ -75,12 +75,23 @@ color: yellow;
     justify-content: center;
     flex-direction: column;
 }
+.filling-box {
+      width: 200px;
+      height: 200px;
+      background-color: lightgray;
+      position: relative;
+      overflow: hidden;
+}
 .fill-animation {
       width: 0;
       height: 100%;
       background-color: #3498db;
       animation: fill 4s ease-in-out forwards;
 }
+@keyframes fill {
+      to {
+        width: 100%;
+      }
 .name{
     font-size: 65px;
     font-weight: bold;
