--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ color: yellow;
     margin: 144px auto;
     display: flex;
     justify-content: space-around;
+    margin-top: 144px;
 }
 .devinfo{
     display: flex;
