--- a/style.css
+++ b/style.css
@@ -175,7 +175,9 @@ font-family: 'Fira Sans', sans-serif;
 }
 .blogcontainer{
     margin: 88px 88px;
-    padding: 200px 200px;
+}
+h2{
+    margin: 45;
 }
  h1{
     margin: 23px;
