--- a/style.css
+++ b/style.css
@@ -183,7 +183,29 @@ justify-content: center;
 align-items:center;
 flex-wrap: wrap;
 }
+.blog-img{
 
+width: 100%;
+
+height: auto;
+
+}
+
+.blog-img img{
+width:100%;
+height: 100%;
+object-fit: cover;
+object-position: center;
+}
+.blog-text{
+padding: 30px;
+display: flex;
+flex-direction: column;
+}
+.blog-text span{
+color: #f33c3c;
+font-size: 0.9rem;
+}
  h1{
     margin: 23px;
     
