--- a/style.css
+++ b/style.css
@@ -206,6 +206,24 @@ flex-direction: column;
 color: #f33c3c;
 font-size: 0.9rem;
 }
+.blog-text .blog-title{
+font-size: 1.3rem;
+font-weight: 500;
+color: #272727;
+}
+.blog-text .blog-title:hover{
+color: #f33c3c;
+transition: all ease 0.3s;
+}
+.blog-text p{
+color: #9b9b9b;
+font-size: 0.9rem;
+display: -webkit-box;
+-webkit-line-clamp: 3;
+-webkit-box-orient: vertical;
+overflow: hidden;
+text-overflow: ellipsis;
+}
  h1{
     margin: 23px;
     
