--- a/style.css
+++ b/style.css
@@ -225,6 +225,34 @@ overflow: hidden;
 text-overflow: ellipsis;
     margin: 20px 0px;
 }
+}
+
+.blog-text a{
+color: #0f0f0f;
+}
+.blog-text a:hover{
+color: #f33c3c;
+transition: all ease 0.3s;
+}
+@media(max-width: 1250px) {
+.blog-box{
+width: 300px;
+}
+}
+@media(max-width:1100px){
+.blog-box{
+width:70%;
+}
+}
+@media(max-width:550px){
+.blog-box{
+margin: 20px 10px;
+width: 100%;
+}
+#blog{
+padding: 20px;
+}
+}
  h1{
     margin: 23px;
     
