--- a/blogstyle.css
+++ b/blogstyle.css
@@ -1,1 +1,364 @@
-blos
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital@1&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+.name::selection{
+    color:yellow;
+    background-color:black;
+}
+.h1 lio{
+    color: red;
+}
+body {
+    background-image: url('background.jpg');
+    
+}
+img{
+    filter: drop-shadow(5px 5px 10px black);
+}
+
+#background {
+    background: linear-gradient(to right bottom,red,blue);
+}
+#boxx:hover img{
+    scale: 2;
+}
+
+#boxx img{
+    transition: all ease 1s;
+}
+
+.sidebar{
+   background-color: transparent;
+    
+    font-family: 'Fira Sans', sans-serif;
+    height: 100vh;
+    transition: transform 0.3s ease-in;
+    
+}
+
+.sidebar nav{
+
+padding: 28px;
+}
+.sidebar nav li{
+
+    list-style: none;
+    font-size: 28px;
+    padding: 33px 0;
+
+}
+
+.sidebar nav li a{
+text-decoration: none;
+color: yellow;
+}
+.main{
+    /*background-color: yellow;*/
+    width: 90vw;
+}
+.container{
+    display: flex;
+}
+.infocontainer{
+    /*background-color: rgb(134, 206, 18);*/
+    height: 58vh;
+    width: 80vw;
+    margin: 144px auto;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 160px;
+}
+.devinfo{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+.name{
+    font-size: 65px;
+    font-weight: bold;
+    color: yellow;
+}
+.hello{
+    font-size: 50px;
+    color: green;
+}
+.about{
+    font-size: 40px;
+    color: yellow
+}
+.moreabout{
+    margin-top: 23px;
+    font-size: 22px;
+color:yellow;
+
+}
+.buttons{
+    margin-top: 34px;
+}
+
+
+.btn{
+    padding: 8px 14px;
+    border-radius: 22px;
+    color: white;
+    background-color: dodgerblue;
+    font-weight: bold;
+    font-size: 21px;
+    margin: 0 5px;
+    transition: all ease 0.1s;
+
+}
+.btn-sm{
+    font-size: 17px;
+    padding: 10px 19px;
+    margin: 12px 0;
+    transition: all ease 0.1s;
+}
+
+.btn:hover{
+background-color: white;
+color: dodgerblue;
+ box-shadow: 10px 10px 0px black;
+}
+.devpic img{
+    width: 20vw;
+    height: 44vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+            
+    
+}
+.contactform{
+    padding: 0 34px;
+    padding-top: 144px;
+    font-family: 'Fira Sans', sans-serif;   
+    margin: 0 88px;
+}
+.contactform h1{
+padding: 12px 0;
+}
+.contactform form div{ 
+ padding: 10px 0 ;
+ display: flex;
+ flex-direction: column;
+
+}
+.contactform form div input{ 
+    width: 26vw;
+    border-radius: 5px;
+    margin: 6px 0 0 0;
+    padding: 3px 0 ;
+   
+   }
+#emailHelp{
+    font-size: 15px;
+    color: rgb(151, 46, 32);
+    margin: 0 5px;
+}
+#form-check{
+    flex-direction: row ;
+}
+#form-check input{
+    width: 24px;
+    margin: 3px 0;
+}
+
+.blogitem{
+margin: 20px;
+font-family: 'Fira Sans', sans-serif;
+width:1000px;
+background-color: #ffffff;
+border: 1px solid #ececec;
+}
+.blogcontainer{
+ margin: 88px 8px;
+display: flex;
+justify-content: center;
+align-items:center;
+flex-wrap: wrap;
+}
+.blog-img{
+
+width: 100%;
+
+height: auto;
+
+}
+
+.blog-img img{
+width:100%;
+height: 100%;
+object-fit: cover;
+object-position: center;
+}
+.blog-text{
+padding: 30px;
+display: flex;
+flex-direction: column;
+}
+.blog-text span{
+color: #f33c3c;
+font-size: 0.9rem;
+}
+.blog-text .blog-title{
+font-size: 1.3rem;
+font-weight: 500;
+color: #272727;
+}
+.blog-text .blog-title:hover{
+color: #f33c3c;
+transition: all ease 0.3s;
+}
+.blog-text p{
+color: #9b9b9b;
+font-size: 0.9rem;
+display: -webkit-box;
+-webkit-line-clamp: 3;
+-webkit-box-orient: vertical;
+overflow: hidden;
+text-overflow: ellipsis;
+    margin: 20px 0px;
+}
+}
+
+.blog-text a{
+color: #0f0f0f;
+}
+.blog-text a:hover{
+color: #f33c3c;
+transition: all ease 0.3s;
+}
+@media(max-width: 1250px) {
+.blog-box{
+width: 300px;
+}
+}
+@media(max-width:1100px){
+.blog-box{
+width:70%;
+}
+}
+@media(max-width:550px){
+.blog-box{
+margin: 20px 10px;
+width: 100%;
+}
+#blog{
+padding: 20px;
+}
+}
+ h1{
+    margin: 23px;
+    
+}
+.intro{
+    
+    margin: 88px 99px;
+}
+.intro h2{
+    font-family: 'Fira Sans', sans-serif;
+    margin: 12px;
+}
+.intro p{
+    font-family: 'Fira Sans', sans-serif;
+    margin: 12px;
+}
+.skillcontainer{
+    padding: 12px;
+    width: 12px;
+}
+.skillitem{
+    display: flex;
+    align-items: center;
+}
+.skill {
+    width: 400px;
+    height: 10px;
+    background-color: red;
+    border: 3px solid black;
+    
+}
+
+.hundred{
+    width: 400px;
+    }
+.forty{
+    width: 160px;
+background-color: rgb(19, 41, 36);
+    
+}
+.fifty{
+    width: 200px;
+background-color: rgb(19, 41, 236);
+    
+}
+.thirty{
+    width: 120px;
+background-color: rgb(19, 401, 386);
+    
+}
+.twenty{
+    width: 80px;
+background-color: rgb(109, 41, 306);
+
+}
+.ten{
+    width: 40px;
+background-color: rgb(1009, 41, 36);
+    
+}
+.sixty{
+    width: 240px;
+background-color: rgb(159, 401, 356);
+    
+}
+.seventy{
+    width: 280px;
+background-color: rgb(199, 419, 369);
+    
+}
+.eighty{
+    width: 320px;
+background-color: rgb(193, 241, 336);
+    
+}
+.ninty{
+    width: 200px;
+background-color: rgb(169, 421, 326);
+    
+}
+.t5{
+    width: 100px;
+    background-color: rgb(18, 233, 204);
+
+}
+.sidebargo{
+    transform: translate(-443px, 0px);
+    position: absolute;
+}
+.ham {
+    position: absolute;
+    cursor: pointer;
+    top: 20px;
+    left: 20px;
+    margin-top: 5px;
+}
+.port{
+    position: absolute;
+    cursor: pointer;
+    top: 20px;
+    left: 60px;
+margin-top: 10px;
+}
+.cross{
+    margin-left: -32px;
+    margin-top: 10px;
+}
+
+    
