--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 #loader{
     height: 100px;
     width: 100px;
-    background-color: red;
+   /* background-color: red;*/
     border-radius: 50%;
     border: 5px solid #ddd;
     border-top-color: #333;
