--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ rotate: 360deg;
 body {
     background-image: url('background.jpg');
     background-size: 100%;
+    background-repeat: no-repeat;
     
 }
 img{
