--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ rotate: 360deg;
 .h1 lio{
     color: red;
 }
-body {
+/*body {
     background-image: url('background.jpg');
-    
+    */
 }
 img{
     filter: drop-shadow(5px 5px 10px black);
