--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ rotate: 360deg;
     color: red;
 }
 body {
-    background-image: url('background.jpg');
+   /* background-image: url('background.jpg');*/
     background-color: #723923;
 }
 img{
@@ -45,7 +45,7 @@ img{
 }
 
 .sidebar{
-   background-color: transparent;
+   background-color: #777777;
     
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
