--- a/blogstyle.css
+++ b/blogstyle.css
@@ -11,10 +11,10 @@
 .h1 lio{
     color: red;
 }
-body {
+/*body {
     background-image: url('background.jpg');
     
-}
+}*/
 img{
     filter: drop-shadow(5px 5px 10px black);
 }
