--- a/blogstyle.css
+++ b/blogstyle.css
@@ -31,7 +31,7 @@ img{
 }
 
 .sidebar{
-   background-color: transparent;
+   background-color: #723923;
     
     font-family: 'Fira Sans', sans-serif;
     height: 100vh;
