--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ padding: 12px 0;
    }
 #emailHelp{
     font-size: 15px;
-    color: rgb(151, 46, 32);
+    color: Black;
     margin: 0 5px;
 }
 #form-check{
