--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ border: 1px solid #ececec;
 
 }
 .blogcontainer{
- margin: 8px 8px;
+ margin: 88px;
 display: flex;
 justify-content: center;
 align-items:center;
