--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ rotate: 360deg;
 }
 body {
    /* background-image: url('background.jpg');*/
-    background-color: #723923;
+    background-color: #F8F8F8;
 }
 img{
     filter: drop-shadow(5px 5px 10px black);
