--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ rotate: 360deg;
 }
 body {
    /* background-image: url('background.jpg');*/
-    background-color: #F8F8F8;
+    background-color: #00FFFF;
 }
 img{
     filter: drop-shadow(5px 5px 10px black);
@@ -46,7 +46,7 @@ img{
 }
 
 .sidebar{
-   background-color: #723923;
+   background-color: #00EEFF;
     
     font-family: 'Fira Sans', sans-serif;
     height: Auto;
