--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img{
    background-color: #00EEFF;
     
     font-family: 'Fira Sans', sans-serif;
-    height: Auto;
+    height: 100vh;
     transition: transform 0.3s ease-in;
     
 }
