--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ background-color: rgb(169, 421, 326);
 
 }
 .sidebargo{
-    transform: translate(-50vw, 400vw );
+    transform: translate(-443pc, 0px );
     position: absolute;
     height: Auto;
 }
