--- a/style.css
+++ b/style.css
@@ -13,6 +13,25 @@
     border-top-color: #333;
     animation: rotate 1s infinte;
 }
+nav {
+    display: inline;
+    unicode-bidi: isolate;
+}
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    unicode-bidi: isolate;
+}
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+    unicode-bidi: isolate;
+}
 @keyframes rotate {
 100%{
 rotate: 360deg;
