--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ background-color: rgb(169, 421, 326);
 
 }
 .sidebargo{
-    transform: translate(-443pc, 0px );
+    transform: translate(-1375px, 0px );
     position: absolute;
     height: Auto;
 }
