--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ img{
 }
 
 .sidebar{
-   background-color: #00FFFE;
+   background-color: #00FFFF;
     width: 100vw;
     align-items: center;
     font-family: 'Fira Sans', sans-serif;
