--- a/blogstyle.css
+++ b/blogstyle.css
@@ -8,6 +8,11 @@
     color:yellow;
     background-color:black;
 }
+.blgtitle
+{
+    text-align: center;
+    margin-top: 160px;
+}
 .h1 lio{
     color: red;
 }
@@ -173,7 +178,7 @@ padding: 12px 0;
 .blogitem{
 margin: 20px;
 font-family: 'Fira Sans', sans-serif;
-width:1000px;
+width:40vw;
 background-color: #ffffff;
 border: 1px solid #ececec;
 }
