--- a/blogstyle.css
+++ b/blogstyle.css
@@ -8,11 +8,11 @@
     color:yellow;
     background-color:black;
 }
-h1.blgtitle
+/* h1.blgtitle
 {
     text-align: center;
     margin-top: 160px;
-}
+} */
 .h1 lio{
     color: red;
 }
