--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital@1&display=swap');
-
+body{
+    color: white;
+}
 *{
     margin: 0;
     padding: 0;
