--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ img{
 }
 
 .sidebar{
-   background-color: #00FFFF;
+   background-color: #123636;
     width: 100vw;
     align-items: center;
     font-family: 'Fira Sans', sans-serif;
