--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ color: white;
 }
 .about{
     font-size: 40px;
-    color: yellow;
+    color: #00ffdeb0;
 }
 .moreabout{
     margin-top: 23px;
