--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ color: white;
     background-color: dodgerblue;
     font-weight: bold;
     font-size: 21px;
-    margin: 0 5px;
+    margin: 4px 5px;
     transition: all ease 0.1s;
 
 }
