--- a/blogstyle.css
+++ b/blogstyle.css
@@ -221,16 +221,27 @@ color: #272727;
 color: #f33c3c;
 transition: all ease 0.3s;
 }
-.blog-text p{
+.blog-text p {
+    color: #9b9b9b;
+    font-size: 0.9rem;
+    overflow: visible; /* Allow the full text to show */
+    display: block; /* Ensure normal block display */
+    -webkit-line-clamp: unset; /* Remove line clamping */
+    -webkit-box-orient: unset; /* Reset orientation */
+    text-overflow: unset; /* Disable ellipsis */
+    margin: 20px 0px;
+}
+
+/* .blog-text p{
 color: #9b9b9b;
 font-size: 0.9rem;
 display: -webkit-box;
--webkit-line-clamp: 3;
+/* -webkit-line-clamp: 3;
 -webkit-box-orient: vertical;
 overflow: hidden;
 text-overflow: ellipsis;
     margin: 20px 0px;
-}
+} */
 }
 
 .blog-text a{
